# Zex

./: .gitignore  README.md  package-lock.json
Zex-Java/: pom.xml
bytecode/: Cargo.toml
bytecode/src/: byte_code.rs  bytecode.rs  file.rs  lib.rs
bytecode/tests/: base_test.rs  file_test.rs
cmd/: Cargo.toml
cmd/src/: cli.yml  main.rs
dfa/: Cargo.toml
dfa/src/: dfa_core.rs  lib.rs  state_handing.rs
docs/: BNF.md  scope.drawio  scope.km  作用域.md
docs/02 语法分析/: BNF.md  parse.drawio
docs/03 语义分析/: scope.drawio  作用域.md
docs/其他/: debug rust.md
java/: simply.java
java_src/: CodeDialog.java
java_src/ast/: ASTList.java  BinaryExpr.java  Name.java  NullStmnt.java  StringLiteral.java
lexer/: Cargo.toml
lexer/src/: char_help.rs  (+6 more)
parse/: Cargo.toml
parse_token/: Cargo.toml
rust_main/: Cargo.toml
rust_src/: Cargo.toml
sample/: add.zex  add1.zex  add2.zex
semantic/: Cargo.toml
semantic/src/: ast_visit.rs  lib.rs  scope.rs  scope_stack.rs  symbol.rs  visitor.rs
semantic/src/visitor/: mod.rs  visit_block_statement.rs  visit_declare_class.rs  visit_declare_fn.rs  visit_declare_variable.rs  visit_primary_identifier.rs  visit_program.rs  visit_statement.rs  visit_statement_assignment.rs  visit_statement_echo.rs  visit_statements.rs  visit_var_declare.rs  visitor.rs
semantic/tests/: ast_visit_test.rs  scope_stack_test.rs  scope_test.rs  visit_class_declare_test.rs  visit_declare_class_test.rs  visit_declare_fn_test.rs  visit_declare_variable_test.rs
src/: Lexer.java  LexerRuner.java  LexerRunner.java  Token.java
syntactic_analysis/: Cargo.toml
(+83 files in other folders)
