[package]
name = "cmd"
version = "0.1.0"
authors = ["com.zexho <zouzhihao994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
parse = { path = "../parse",version = "0.1.0"}
lexer = { path = "../lexer",version = "0.1.0"}
semantic = { path = "../semantic",version = "0.1.0"}
# structopt = { version = "0.3", default-features = false }