[package]
name = "semantic"
version = "0.1.0"
authors = ["zexho <zouzhihao994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer",version = "0.1.0"}
parse = { path = "../parse",version = "0.1.0"}